--- a/settings.html
+++ b/settings.html
@@ -75,11 +75,11 @@
       <div id="tab-ui" class="tab-content">
         <label class="block mb-3">
           Business / Personal Name:
-          <input class="w-full mt-1 p-2 border rounded" placeholder="e.g. Stephen Trautman">
+          <input id="ownerName" class="w-full mt-1 p-2 border rounded" placeholder="e.g. Stephen Trautman">
         </label>
         <label class="block mb-3">
           Background Colour:
-          <select class="w-full mt-1 p-2 border rounded">
+          <select id="bgColor" class="w-full mt-1 p-2 border rounded">
             <option value="">Default (Slate)</option>
             <option value="indigo">Indigo Blue</option>
             <option value="pink">Pink Red</option>
@@ -88,11 +88,11 @@
         </label>
         <label class="block mb-3">
           Sidebar Colour:
-          <input type="color" class="w-12 h-10 border rounded">
+          <input id="sidebarColor" type="color" class="w-12 h-10 border rounded">
         </label>
         <label class="block mb-3">
           Language:
-          <select class="w-full mt-1 p-2 border rounded">
+          <select id="language" class="w-full mt-1 p-2 border rounded">
             <option value="en">English</option>
             <option value="es">Spanish</option>
             <option value="fr">French</option>
