--- a/settings.html
+++ b/settings.html
@@ -75,7 +75,7 @@
       <div id="tab-ui" class="tab-content">
         <label class="block mb-3">
           Business / Personal Name:
-          <input id="ownerName" class="w-full mt-1 p-2 border rounded" placeholder="e.g. Stephen Trautman">
+          <input id="ownerName" class="w-full mt-1 p-2 border rounded" placeholder="e.g. John Doe">
         </label>
         <label class="block mb-3">
           Background Colour:
