--- a/index.html
+++ b/index.html
@@ -175,21 +175,21 @@
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
         <!-- Assistant Card Images -->
-        <img src="images/zoe.jpg" alt="Zoe" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/arlo.jpg" alt="Arlo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/lena.jpg" alt="Lena" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/james.jpg" alt="James" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/ethan.jpg" alt="Ethan" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/aisha.jpg" alt="Aisha" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/ava.jpg" alt="Ava" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/mia.jpg" alt="Mia" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/sarah.jpg" alt="Sarah" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/elsa.jpg" alt="Elsa" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/lucas.jpg" alt="Lucas" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/sophie.jpg" alt="Sophie" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/isaac.jpg" alt="Isaac" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/tyler.jpg" alt="Tyler" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/zoe.png" alt="Zoe" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300"> 
+<img src="images/arlo.png" alt="Arlo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+<img src="images/lena.png" alt="Lena" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+<img src="images/james.png" alt="James" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+<img src="images/ethan.png" alt="Ethan" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+<img src="images/aisha.png" alt="Aisha" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+<img src="images/ava.png" alt="Ava" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+<img src="images/leo.png" alt="Leo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+<img src="images/mia.png" alt="Mia" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+<img src="images/sarah.png" alt="Sarah" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+<img src="images/elsa.png" alt="Elsa" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+<img src="images/lucas.png" alt="Lucas" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+<img src="images/sophie.png" alt="Sophie" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+<img src="images/isaac.png" alt="Isaac" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+<img src="images/tyler.png" alt="Tyler" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
       </div>
     </main>
   </div>
