--- a/assistants.html
+++ b/assistants.html
@@ -4,35 +4,93 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AI Assistants</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    .assistant-card {
+      @apply relative rounded-2xl overflow-hidden shadow-lg transition-transform transform hover:scale-105;
+    }
+    .assistant-info {
+      @apply absolute bottom-0 text-white p-4 w-full z-10;
+    }
+    .gradient-mask {
+      @apply absolute bottom-0 w-full h-1/2 z-0;
+    }
+  </style>
 </head>
-<body class="bg-gradient-to-br from-indigo-800 to-blue-900 text-white min-h-screen p-6">
-  <h1 class="text-4xl font-bold mb-8 text-center">Meet Your AI Assistants</h1>
+<body class="bg-gradient-to-br from-indigo-800 to-blue-900 text-white min-h-screen font-sans">
+  <div class="flex">
+    <!-- Sidebar -->
+    <aside class="w-16 bg-indigo-900 h-screen flex flex-col items-center py-4 space-y-4 fixed left-0 top-0">
+      <a href="index.html" title="Home"><svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" stroke-width="2"
+        viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M13 5v6h6m-6 0H7m6 0v6m0 0H7m6 0h6"></path></svg></a>
+      <a href="#" title="Assistants"><svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" stroke-width="2"
+        viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M17 20h5v-2a3 3 0 00-3-3h-2m-4 0a3 3 0 00-3 3v2H7a2 2 0 01-2-2V5a2 2 0 012-2h10a2 2 0 012 2v13a2 2 0 01-2 2z"></path></svg></a>
+    </aside>
 
-  <div id="assistant-cards" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
-    <!-- Cards injected here -->
+    <!-- Main Content -->
+    <main class="ml-16 w-full px-8 py-10">
+      <h1 class="text-4xl font-bold mb-2 text-center">Meet Your AI Assistants</h1>
+      <div id="cardContainer" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mt-10"></div>
+    </main>
   </div>
 
   <script>
-  fetch('assistantData.json')
-    .then(res => res.json())
-    .then(data => {
-      Object.entries(data).forEach(([key, { name, role, description }]) => {
-        const card = document.querySelector(`.card img[src$="${key}.png"]`)?.parentElement;
+    const assistants = [
+      {
+        name: "Zoe", role: "Social Media AI Assistant", desc: "I plan posts, manage engagement, and write captions.", image: "images/zoe.png", color: "bg-pink-400"
+      },
+      {
+        name: "Arlo", role: "Finance AI Assistant", desc: "I help with bookkeeping, invoicing, and financial records.", image: "images/arlo.png", color: "bg-yellow-400"
+      },
+      {
+        name: "Lena", role: "HR AI Assistant", desc: "I track staff changes, onboarding, and HR documentation.", image: "images/lena.png", color: "bg-yellow-400"
+      },
+      {
+        name: "James", role: "Project Management AI Assistant", desc: "I help organize workflows, timelines, and deliverables.", image: "images/james.png", color: "bg-purple-500"
+      },
+      {
+        name: "Ethan", role: "eCommerce AI Assistant", desc: "I manage your online store — made simple.", image: "images/ethan.png", color: "bg-blue-500"
+      },
+      {
+        name: "Aisha", role: "Customer Service AI Assistant", desc: "I handle queries, briefs, FAQs, and reminders.", image: "images/aisha.png", color: "bg-green-600"
+      },
+      {
+        name: "Ava", role: "Service AI Assistant", desc: "I chase missing payments and send reminders.", image: "images/ava.png", color: "bg-pink-300"
+      },
+      {
+        name: "Leo", role: "Startup AI Assistant", desc: "I help get your new business on track.", image: "images/leo.png", color: "bg-orange-400"
+      },
+      {
+        name: "Mia", role: "Cybersecurity AI Assistant", desc: "I help protect your systems and your data.", image: "images/mia.png", color: "bg-purple-500"
+      },
+      {
+        name: "Sarah", role: "Staff AI Assistant", desc: "I manage scheduling and daily logistics.", image: "images/sarah.png", color: "bg-green-600"
+      },
+      {
+        name: "Elsa", role: "Content AI Assistant", desc: "I generate blog posts, emails, and internal copy.", image: "images/elsa.png", color: "bg-teal-300"
+      },
+      {
+        name: "Lucas", role: "Business AI Assistant", desc: "I help grow your firm through automation.", image: "images/lucas.png", color: "bg-pink-600"
+      }
+    ];
 
-        if (card) {
-          const overlay = document.createElement("div");
-          overlay.className = "absolute bottom-0 w-full px-4 py-3 bg-gradient-to-t from-black via-black/70 to-transparent text-white";
-          overlay.innerHTML = `
-            <h2 class="text-2xl font-bold">${name}</h2>
-            <p class="text-sm font-semibold text-gray-200">${role}</p>
-            <p class="text-sm italic mt-1 text-gray-300">“${description}”</p>
-          `;
-          card.appendChild(overlay);
-        }
-      });
-    })
-    .catch(err => console.error("Failed to load assistant data:", err));
-</script>
+    const container = document.getElementById("cardContainer");
+
+    assistants.forEach(({ name, role, desc, image, color }) => {
+      const card = document.createElement("div");
+      card.className = `assistant-card ${color}`;
+
+      card.innerHTML = `
+        <img src="${image}" alt="${name}" class="w-full h-auto object-cover" />
+        <div class="gradient-mask ${color} opacity-60"></div>
+        <div class="assistant-info">
+          <h2 class="text-xl font-semibold">${name}</h2>
+          <p class="text-sm font-medium">${role}</p>
+          <p class="text-sm italic opacity-80 mt-1">"${desc}"</p>
+        </div>
+      `;
+      container.appendChild(card);
+    });
+  </script>
 </body>
 </html>
