--- a/index.html
+++ b/index.html
@@ -96,39 +96,7 @@
 </head>
 
 <body class="min-h-screen text-white" style="background-color: #8C8CCF;">
-  <!-- Welcome Modal -->
-  <div id="welcome-modal" class="hidden fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50">
-    <div class="bg-white text-black p-8 rounded-xl w-96 space-y-6">
-      <h2 id="welcome-title" class="text-2xl font-bold">Welcome to East-West AI</h2>
-      <label for="welcome-name" class="block">
-        <span>Your Name:</span>
-        <input id="welcome-name" class="w-full border p-2 rounded mt-1" placeholder="e.g. Stephen's Workspace">
-      </label>
-      <label for="welcome-language" class="block">
-        <span>Language:</span>
-        <select id="welcome-language" class="w-full border p-2 rounded mt-1">
-          <option value="">Select Language</option>
-          <option value="en">English</option>
-          <option value="es">Spanish</option>
-          <option value="fr">French</option>
-          <option value="de">German</option>
-          <option value="it">Italian</option>
-          <option value="pt">Portuguese</option>
-          <option value="ru">Russian</option>
-          <option value="zh">Chinese</option>
-          <option value="ja">Japanese</option>
-          <option value="ko">Korean</option>
-          <option value="ar">Arabic</option>
-          <option value="hi">Hindi</option>
-        </select>
-      </label>
-      <div class="flex justify-end">
-        <button id="welcome-continue" onclick="saveWelcomeSettings()" class="px-4 py-2 bg-violet-600 text-white rounded hover:bg-violet-700">Continue</button>
-      </div>
-    </div>
-  </div>
   <div class="flex min-h-screen">
-    <!-- Sidebar -->
     <aside class="w-20 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40 justify-between" style="background-color: #1F395C;">
       <div>
         <div class="flex justify-center items-center mb-4">
@@ -163,14 +131,11 @@
       </a>
     </aside>
 
-    <!-- Main Content -->
     <main class="flex-grow p-10 pl-32" style="background-color: #8C8CCF;">
       <h1 class="text-4xl font-bold text-center mb-2">East-West AI Platform</h1>
       <p id="workspace-title" class="text-center text-gray-300 mb-12">My AI Workspace</p>
 
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8" id="assistant-grid">
-        <!-- Assistant cards will be injected here dynamically -->
-      </div>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8" id="assistant-grid"></div>
     </main>
   </div>
 
@@ -199,10 +164,10 @@
       card.className = "relative rounded-xl overflow-hidden shadow-xl hover:shadow-violet-500/30 transition duration-300";
       card.innerHTML = `
         <img src="images/${id}.png" alt="${name}" class="w-full h-96 object-cover" />
-        <div class="absolute bottom-0 w-full px-4 py-3 bg-gradient-to-t from-black/40 via-black/10 to-transparent">
+        <div class="absolute bottom-0 w-full px-4 py-4 bg-black bg-opacity-40">
           <h2 class="text-xl font-bold text-white">${name}</h2>
-          <p class="text-sm font-medium text-gray-200">${role}</p>
-          <p class="text-sm italic text-gray-300 mt-1">“${desc}”</p>
+          <p class="text-sm font-medium text-white">${role}</p>
+          <p class="text-sm italic text-white mt-1">“${desc}”</p>
         </div>`;
       grid.appendChild(card);
     });
