--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>More actions
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -96,95 +96,49 @@
 </head>
 
 <body class="min-h-screen text-white" style="background-color: #8C8CCF;">
-  <!-- Welcome Modal -->
-  <div id="welcome-modal" class="hidden fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50">
-    <div class="bg-white text-black p-8 rounded-xl w-96 space-y-6">
-      <h2 id="welcome-title" class="text-2xl font-bold">Welcome to East-West AI</h2>
-      <label for="welcome-name" class="block">
-        <span>Your Name:</span>
-        <input id="welcome-name" class="w-full border p-2 rounded mt-1" placeholder="e.g. Stephen's Workspace">
-      </label>
-      <label for="welcome-language" class="block">
-        <span>Language:</span>
-        <select id="welcome-language" class="w-full border p-2 rounded mt-1">
-          <option value="">Select Language</option>
-          <option value="en">English</option>
-          <option value="es">Spanish</option>
-          <option value="fr">French</option>
-          <option value="de">German</option>
-          <option value="it">Italian</option>
-          <option value="pt">Portuguese</option>
-          <option value="ru">Russian</option>
-          <option value="zh">Chinese</option>
-          <option value="ja">Japanese</option>
-          <option value="ko">Korean</option>
-          <option value="ar">Arabic</option>
-          <option value="hi">Hindi</option>
-        </select>
-      </label>
-      <div class="flex justify-end">
-        <button id="welcome-continue" onclick="saveWelcomeSettings()" class="px-4 py-2 bg-violet-600 text-white rounded hover:bg-violet-700">Continue</button>
-      </div>
-    </div>
-  </div>
   <div class="flex min-h-screen">
-    <!-- Sidebar -->
     <aside class="w-20 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40 justify-between" style="background-color: #1F395C;">
       <div>
-        <!-- Sidebar Header (Menu Icon) -->
         <div class="flex justify-center items-center mb-4">
           <i data-feather="menu" class="cursor-pointer"></i>
         </div>
-
-        <!-- Main Icons -->
         <div class="flex flex-col space-y-6 mt-96">
           <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
             <i data-feather="home"></i>
-@@ -160,41 +157,56 @@
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Home</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="zap"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Apps</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="users"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Team</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="bar-chart-2"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Stats</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="book-open"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Docs</span>
           </div>
         </div>
       </div>
-
-      <!-- Settings Icon -->
-     <a href="settings.html" class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative mb-6">
-  <i data-feather="settings"></i>
-  <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Settings</span>
-</a>
       <a href="settings.html" class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative mb-6">
         <i data-feather="settings"></i>
         <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Settings</span>
       </a>
     </aside>
 
-    <!-- Main Content -->
     <main class="flex-grow p-10 pl-32" style="background-color: #8C8CCF;">
       <h1 class="text-4xl font-bold text-center mb-2">East-West AI Platform</h1>
       <p id="workspace-title" class="text-center text-gray-300 mb-12">My AI Workspace</p>
 
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
-        <!-- Assistant Card Images -->
-        <img src="images/zoe.png" alt="Zoe" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300"> 
-<img src="images/arlo.png" alt="Arlo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-<img src="images/lena.png" alt="Lena" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-<img src="images/james.png" alt="James" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-<img src="images/ethan.png" alt="Ethan" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-<img src="images/aisha.png" alt="Aisha" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-<img src="images/ava.png" alt="Ava" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-<img src="images/leo.png" alt="Leo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-<img src="images/mia.png" alt="Mia" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-<img src="images/sarah.png" alt="Sarah" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-<img src="images/elsa.png" alt="Elsa" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-<img src="images/lucas.png" alt="Lucas" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-<img src="images/sophie.png" alt="Sophie" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-<img src="images/isaac.png" alt="Isaac" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-<img src="images/tyler.png" alt="Tyler" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8" id="assistant-grid">
-        <!-- Assistant cards will be injected here dynamically -->
-      </div>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8" id="assistant-grid"></div>
     </main>
   </div>
 
-  
   <script>
     const assistants = [
       { id: "zoe", name: "Zoe", role: "Social Media AI Assistant", desc: "I plan posts, manage engagement, and write captions." },
@@ -210,13 +164,13 @@
       card.className = "relative rounded-xl overflow-hidden shadow-xl hover:shadow-violet-500/30 transition duration-300";
       card.innerHTML = `
         <img src="images/${id}.png" alt="${name}" class="w-full h-96 object-cover" />
-        <div class="absolute bottom-0 w-full px-4 py-3 bg-gradient-to-t from-black/40 via-black/10 to-transparent">
+        <div class="absolute bottom-0 w-full px-4 py-3 bg-black bg-opacity-0">
           <h2 class="text-xl font-bold text-white">${name}</h2>
-          <p class="text-sm font-medium text-gray-200">${role}</p>
-          <p class="text-sm italic text-gray-300 mt-1">“${desc}”</p>
+          <p class="text-sm font-medium text-white">${role}</p>
+          <p class="text-sm italic text-white mt-1">“${desc}”</p>
         </div>`;
       grid.appendChild(card);
-    });Add commentMore actions
+    });
   </script>
   <script>feather.replace();</script>
 </body>
